arreglos de diseño en navbar

--- a/pages/recetario.html
+++ b/pages/recetario.html
@@ -30,7 +30,7 @@
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                       <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                          <a href="../index.html" class="nav-link active" aria-current="page" href="#">Inicio</a>
+                          <a href="../index.html" class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                           <a href="recetario.html" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
