--- a/pages/recetario.html
+++ b/pages/recetario.html
@@ -7,6 +7,11 @@
     <meta name="Descripción" content="Retario completo de Recedo con el paso a paso de cada receta junto a datos que te ayudarán a realizar la receta con completo éxito">
     <meta name="keywords" content="cocina, recetas, ingredientes, preparacion, comida, vegetales, desayuno, once, almuerzo, cena, delivery, gastronomia">
 
+        <!--Link a Tipografia-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
         <!--Link de Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--Link de CSS-->
@@ -126,8 +131,8 @@
                   <div class="card" style="width: 18rem;">
                     <img src="../img/receta-7.png" class="card-img-top" alt="imagen de la receta a preparar">
                     <div class="card-body">
-                      <h5 class="card-title">Nombre Receta</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum aspernatur molestiae atque, sequi fuga odio dolores nam reiciendis saepe cumque, dolorem eos voluptate culpa iure? Molestiae excepturi vero quod autem!.</p>
+                      <h5 class="card-title">Ñoquis con Pesto</h5>
+                      <p class="card-text">Preparar unos ñoquis caseros es más sencillo de lo que se cree. Y además de ser un plato económico es muy rico. En esta ocasión te presentamos el tradicional pesto de albahaca.</p>
                       <a href="../pages/receta-uno.html" class="btn btn-light">Ver receta</a>
                     </div>
                   </div>
